<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#6699FF"
    android:fadingEdge="horizontal" >

    <TextView
            android:id="@+id/text"
            android:text="@string/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dip"
            android:textSize="20sp" >
    </TextView>
    <TextView
    	android:id="@+id/error"
    	android:text="@string/error"
    	android:layout_width="wrap_content"
    	android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_below ="@+id/text"
        android:typeface="serif"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textColor="#FF0000">
    </TextView>
    <EditText
            android:id="@+id/username"
            android:layout_width="213dip"
            android:layout_marginTop="30dp"
            android:layout_below ="@+id/error"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:gravity="center"
            android:textSize="18sp"
            android:typeface="sans"
            android:textStyle="italic">
     </EditText>
    <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="18sp"
            android:typeface="sans"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_below ="@+id/username"
            android:layout_centerHorizontal="true">
     </EditText>
     <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:layout_marginTop="10dp"
            android:layout_below ="@+id/password"
            android:layout_centerHorizontal="true">
     </CheckBox>
     <Button
            android:id="@+id/login"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="22sp"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_below ="@+id/check"
            android:layout_centerHorizontal="true">
     </Button> 
     <Button
            android:id="@+id/forgotPassword"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textSize="13sp"
            android:typeface="serif"
            android:layout_marginTop="20dp"
            android:layout_below ="@+id/login"
            android:layout_centerHorizontal="true">
     </Button> 
    

</RelativeLayout>
