<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#6699FF"
    android:fadingEdge="horizontal" >
    
    <TextView
        android:id="@+id/headerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip"
        android:text="@string/headerItem"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="serif" >
    </TextView>
    <Spinner
        android:id="@+id/spinnerItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerItem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >
     </Spinner>
     <Button
            android:id="@+id/submitItem"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/submitItem"
            android:textSize="22sp"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_below ="@+id/spinnerItem"
            android:layout_centerHorizontal="true"> 
     </Button> 
     <TextView
        android:id="@+id/showItem"
    	android:text="@string/showItem"
    	android:layout_width="wrap_content"
    	android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below ="@+id/submitItem"
        android:typeface="serif"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:textSize="14sp" >
     </TextView>

   

</RelativeLayout>
 